# game_engine

./: Cargo.toml  build.rs  linecount.sh  readme.md  test.txt
res/: Sprite-0001.ase  flat.mtl
src/: lib.rs  main.rs  mesh_instance.rs  transform.rs
src/advanced_rendering/: camera.rs  extendable_buffer.rs  instance.rs  lighting.rs  mesh_instance.rs  mod.rs  model.rs  texture.rs
src/app_manager/: app.rs  camera_controller.rs  mod.rs  state.rs  state_new_fn.rs
src/cards/: main.rs
src/client/: main.rs
src/client/advanced_rendering/: extendable_buffer.rs  mod.rs  model.rs  render_vertex.rs  texture.rs
src/client/advanced_rendering/fast_model/: dual_quat.rs  dynamic_model.rs  gltf.rs  mod.rs  model_manager.rs  transform.rs
src/client/app_manager/: app.rs  camera.rs  mod.rs  render_pipeline.rs  state.rs  state_new_fn.rs
src/client/compiled_shaders/: gltf.wgsl  light.wgsl  main.wgsl
src/client/player_controller/: player.rs
src/client/shaders/: gltf.wesl  main.wesl  main.wgsl
src/collision/: bullet_manager.rs  colliders.rs  collision_manager.rs  collision_object.rs  mod.rs
src/entity_logic/: ground.rs  mod.rs  vehicles.rs
src/networking/: mod.rs  packet.rs  reciever.rs
src/player_controller/: player.rs
src/player_manager/: mod.rs  player_base.rs
src/server/: entity_management.rs  main.rs
